Searchable and readable list selectors (#1883)
* Moved the MCItemSelectorDialog filter logic to a superclass

* Added DataList and String selector dialogs

* String selector dialog now uses string arrays

* Fixed issue with "close window" button in list selector dialogs

* Changed field selectors so that they use the new list selectors

* Fixed mcitem multi-selector always adding the selected values

* Window a bit bigger

* Added icons and readable custom names instead of CUSTOM: prefix

* Added "Set message" method

Co-authored-by: KlemenDEV <16374228+KlemenDEV@users.noreply.github.com>