@@ -19,17 +19,13 @@
 package net.mcreator.ui.minecraft;
 
 import net.mcreator.element.parts.BiomeEntry;
-import net.mcreator.minecraft.DataListEntry;
 import net.mcreator.minecraft.ElementUtil;
 import net.mcreator.ui.MCreator;
 import net.mcreator.ui.component.JItemListField;
-import net.mcreator.ui.component.util.PanelUtils;
+import net.mcreator.ui.dialogs.DataListSelectorDialog;
 import net.mcreator.ui.init.L10N;
 
-import javax.swing.*;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class BiomeListField extends JItemListField<BiomeEntry> {
 
@@ -40,18 +36,8 @@ public class BiomeListField extends JItemListField<BiomeEntry> {
 	}
 
 	@Override protected List<BiomeEntry> getElementsToAdd() {
-		JList<String> vlist = new JList<>(
-				ElementUtil.loadAllBiomes(frame.getWorkspace()).stream().map(DataListEntry::getName)
-						.toArray(String[]::new));
-		int option = JOptionPane.showOptionDialog(frame,
-				PanelUtils.northAndCenterElement(L10N.label("dialog.list_field.biome_list_message"),
-						new JScrollPane(vlist)), L10N.t("dialog.list_field.biome_list_title"),
-				JOptionPane.OK_CANCEL_OPTION, JOptionPane.PLAIN_MESSAGE, null, null, null);
-
-		if (option == JOptionPane.OK_OPTION && vlist.getSelectedValue() != null) {
-			return vlist.getSelectedValuesList().stream().map(e -> new BiomeEntry(frame.getWorkspace(), e))
-					.collect(Collectors.toList());
-		}
-		return Collections.emptyList();
+		return DataListSelectorDialog.openMultiSelectorDialog(frame, ElementUtil::loadAllBiomes,
+				L10N.t("dialog.list_field.biome_list_title"), L10N.t("dialog.list_field.biome_list_message"))
+			.stream().map(e -> new BiomeEntry(frame.getWorkspace(), e)).toList();
 	}
 }
