@@ -19,17 +19,13 @@
 package net.mcreator.ui.minecraft;
 
 import net.mcreator.element.parts.Enchantment;
-import net.mcreator.minecraft.DataListEntry;
 import net.mcreator.minecraft.ElementUtil;
 import net.mcreator.ui.MCreator;
 import net.mcreator.ui.component.JItemListField;
-import net.mcreator.ui.component.util.PanelUtils;
+import net.mcreator.ui.dialogs.DataListSelectorDialog;
 import net.mcreator.ui.init.L10N;
 
-import javax.swing.*;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class EnchantmentListField extends JItemListField<Enchantment> {
 
@@ -40,19 +36,9 @@ public class EnchantmentListField extends JItemListField<Enchantment> {
 	}
 
 	@Override protected List<Enchantment> getElementsToAdd() {
-		JList<String> vlist = new JList<>(
-				ElementUtil.loadAllEnchantments(mcreator.getWorkspace()).stream().map(DataListEntry::getName)
-						.toArray(String[]::new));
-		int option = JOptionPane.showOptionDialog(mcreator,
-				PanelUtils.northAndCenterElement(L10N.label("dialog.list_field.enchantment_message"),
-						new JScrollPane(vlist)), L10N.t("dialog.list_field.enchantment_title"),
-				JOptionPane.OK_CANCEL_OPTION, JOptionPane.PLAIN_MESSAGE, null, null, null);
-
-		if (option == JOptionPane.OK_OPTION && vlist.getSelectedValue() != null) {
-			return vlist.getSelectedValuesList().stream().map(e -> new Enchantment(mcreator.getWorkspace(), e))
-					.collect(Collectors.toList());
-		}
-		return Collections.emptyList();
+		return DataListSelectorDialog.openMultiSelectorDialog(mcreator, ElementUtil::loadAllEnchantments,
+				L10N.t("dialog.list_field.enchantment_title"), L10N.t("dialog.list_field.enchantment_message"))
+			.stream().map(e -> new Enchantment(mcreator.getWorkspace(), e)).toList();
 	}
 
 }
